k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: LoadBalancer
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
