k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  defaultBackend: 
    service:
      name: node-service
      port:
        number: 8080
